[Payment Handler] Default text color without a theme.

Before this patch, a payment handler page without a theme would have a
white toolbar with white text on it, which was unreadable.

This patch checks for a theme background color of zero, which indicates
absence of a theme, and uses the default text color in this case.

After this patch, a payment handler page without a theme has white
toolbar with black text on it, which is readable.

Bug: 829973
Change-Id: I5b87baac7c46cc4e087d4b61c2c8e4a4ea432df8
Reviewed-on: https://chromium-review.googlesource.com/1000319
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548964}
Former-commit-id: 7a0c954204c16fc4e7ef3298bb037eac28506fde